[metadata]
name = ascii_rep_devoli170
version = 0.0.1
author = Oliver Luib
author_email = oliluib@googlemail.com
description = Generates extended ascii representations for numpys 2D arrays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devoli170/ascii_matrix
project_urls =
    Bug Tracker = https://github.com/devoli170/ascii_matrix/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src