[tool.poetry]
name = "3D_windowing_edu"
version = "0.0.1"
description = ""
authors = ["Oliver Luib <oliluib@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyopengl = "^3.1.5"
glfw = "^2.4.0"
pyrr = "^0.10.3"
numpy = "^1.21.1"
pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
