[tool.poetry]
name = "ascii_rep"
version = "0.0.1"
description = "Generates ascii representations for numpy's 2D arrays"
authors = ["devoli170 <oliluib@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
