[tool.poetry]
name = "matrix_to_ascii"
version = "0.0.1"
description = "Generates an ascii representation for numpy 2D arrays"
authors = ["devoli170 <dev.170.info@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
