[tool.poetry]
name = "la_edu"
version = "0.0.1"
description = ""
authors = ["Oliver Luib <oliluib@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
numpy = "^1.21"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"